# Melopero_Sensei

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake
C++/examples/: CMakeLists.txt  README.md
C++/examples/SHMUP/: CMakeLists.txt  game.cpp  sprites.h
C++/examples/demo/: CMakeLists.txt  demo.cpp  game sprites.h  sprites.h
C++/examples/exercise/: CMakeLists.txt  exercise.cpp  heart.h
C++/examples/freefall/: CMakeLists.txt  freefall_example.cpp
C++/examples/imu/: CMakeLists.txt  imu_example.cpp
C++/examples/microphone/: CMakeLists.txt  mic.cpp
C++/examples/pedometer/: CMakeLists.txt  pedometer_example.cpp
C++/examples/tap_detection/: CMakeLists.txt  tap_detection_example.cpp
C++/examples/touch/: CMakeLists.txt  touch_example.cpp
C++/src/: I2C.c  I2C.h  LSM6DSL.cpp  LSM6DSL.hpp  MPR121.c  MPR121.h  MeloperoSensei.cpp  MeloperoSensei.hpp  PWM.c  PWM.h  SPI.c  SPI.h  ST7789.c  ST7789.h  analog.c  analog.h  audio.c  audio.h  audio_fifo.c  audio_fifo.h  character.h  display.hpp  fifo.c  fifo.h  font.h  graphics.c  graphics.h  image.h  input.c  input.h  io_expander.c  io_expander.h  microphone.c  microphone.h  notes.h
C++/src/lsm6dsl-pid/: lsm6dsl_reg.c
C++/src/mic-lib-for-pico/: pdm_microphone.c
MicroPython/examples/: display_basics_1.py  display_basics_2.py  draw_line_pixel.py  fitness_device.py  freefall_tap_detect.py  imu_read_values.py  input_basics1.py  led21.py  read_battery.py  read_light_sensor.py  step_counter.py  touch_interrupt.py  touch_sound_light_bat_inputs.py
MicroPython/installer/: melopero-sensei-micropython-0.9.0.uf2  melopero-sensei-micropython-0.9.1.uf2  melopero-sensei-micropython-beta.uf2
MicroPython/src/: README.md  micropython.cmake  sensei.c  sensei.cpp  sensei.h
